--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -8,6 +9,7 @@
     <version>1.0</version>
 
     <name>spring-boot-demo</name>
+    <url></url>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -20,11 +22,10 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
-        <!-- Add SonarQube server URL here -->
-        <sonar.host.url>http://20.12.11.81:9000</sonar.host.url> 
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -38,15 +39,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <!-- debugging -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+
     </dependencies>
 
     <build>
+
         <finalName>spring-boot-web</finalName>
 
         <plugins>
@@ -57,21 +61,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>7.9</version>
-                <configuration>
-                    <!-- Optional: explicitly add the SonarQube server URL -->
-                    <sonar.host.url>${sonar.host.url}</sonar.host.url>
-                </configuration>
-            </plugin>
+
         </plugins>
     </build>
+
+
 </project>
